--- a/style.css
+++ b/style.css
@@ -13,10 +13,18 @@ li{
   padding: 10px;
 }
 header{
-  background-color: aqua;
+  background-color: #00ffff;
   /* height: 100px; */
 }
 .counts{
   background-color: black;
-  color: white;
+  color: #ffffff;
+}
+li a{
+  text-decoration: none;
+  color: #000000;
+  padding: 10px;
+}
+li a:hover{
+  background-color: #92fcfc;
 }
